<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:id="@+id/btLinLayout"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/largemargin"
        android:layout_marginRight="@dimen/largemargin">

        <TextView
            android:id="@+id/btTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/bt"
            android:textSize="@dimen/largefont" />

        <Switch
            android:id="@+id/enableBTSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="8">

            <TextView
                android:id="@+id/discovDevTxtView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/discovered_devices"
                android:textSize="@dimen/largefont"
                android:layout_weight="1"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginLeft="@dimen/largemargin"
                android:layout_marginRight="@dimen/largemargin"
                android:gravity="center_vertical"
                android:clickable="true"/>

            <RelativeLayout
                android:id="@+id/discovDevRelLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginLeft="@dimen/largemargin"
                android:layout_marginRight="@dimen/largemargin"
                android:layout_weight="6"
                android:visibility="visible">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/discoveredDevicesRecView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>

            <TextView
                android:id="@+id/pairedDevTxtView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/paired_devices"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/largefont"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginLeft="@dimen/largemargin"
                android:layout_marginRight="@dimen/largemargin"
                android:clickable="true"/>

            <RelativeLayout
                android:id="@+id/pairedDevRelLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginLeft="@dimen/largemargin"
                android:layout_marginRight="@dimen/largemargin"
                android:layout_weight="6"
                android:visibility="visible">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/pairedDevicesRecView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:visibility="visible">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/largemargin"
        android:layout_marginRight="@dimen/largemargin">

        <com.dd.CircularProgressButton
            android:id="@+id/scanBtn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:cpb_textIdle="@string/start_scan"
            android:textSize="@dimen/normalfont"
            android:textColor="@color/textPrimary"
            android:layout_centerInParent="true"
            app:cpb_cornerRadius="60dp"
            app:cpb_colorProgress="@color/colorPrimaryLight"
            app:cpb_colorIndicatorBackground="@color/colorPrimaryLight"
            app:cpb_colorIndicator="@color/colorAccent"
            app:cpb_selectorIdle="@color/colorAccent"/>

    </RelativeLayout>
</LinearLayout>